--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" href="vendors/summernote/summernote.css">
     <link rel="stylesheet" href="vendors/bootgrid/jquery.bootgrid.min.css">
     <link rel="shortcut icon" href="favicon.ico">
+    <style>
+        #fixedbuttonRight {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+        }
+        #fixedbuttonLeft {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+        }
+    </style>
 </head>
 
 <body ng-app="naseNutAppApp">
@@ -32,16 +44,9 @@
             </li>
             <li class="pull-right">
                 <ul class="top-menu">
-                    <div ng-hide="">
-                        <li id="top" class="logo">
-                            <a ui-sref="login">Ingresar</a>
-                        </li>
-                    </div>
-                    <div ng-show="isAuth">
-                        <li id="top" class="logo">
-                            <a ui-sref="login">Salir</a>
-                        </li>
-                    </div>
+                    <li id="top" class="logo">
+                        <a ui-sref="login">Ingresar</a>
+                    </li>
                 </ul>
             </li>
         </ul>
@@ -76,7 +81,7 @@
                     </ul>
                 </div>
                 <ul class="main-menu">
-                    <li class="active"><a href="index.html"><i class="md md-home"></i> Home</a></li>
+                    <li class="active"><a ui-sref="home"><i class="md md-home"></i> Home</a></li>
 
                     <li><a ui-sref="users"><i class="md md-people"></i> Usuarios</a></li>
 
@@ -92,47 +97,7 @@
                         </ul>
                     </li>
 
-                    <li class="sub-menu">
-                        <a href=""><i class="md md-my-library-books"></i> Forms</a>
-
-                        <ul>
-                            <li><a href="form-elements.html">Basic Form Elements</a></li>
-                            <li><a href="form-components.html">Form Components</a></li>
-                            <li><a href="form-examples.html">Form Examples</a></li>
-                            <li><a href="form-validations.html">Form Validation</a></li>
-                        </ul>
-                    </li>
-                    <li class="sub-menu">
-                        <a href=""><i class="md md-swap-calls"></i>User Interface</a>
-                        <ul>
-                            <li><a href="colors.html">Colors</a></li>
-                            <li><a href="animations.html">Animations</a></li>
-                            <li><a href="buttons.html">Buttons</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="alerts.html">Alerts</a></li>
-                            <li><a href="notification-dialog.html">Notifications & Dialogs</a></li>
-                            <li><a href="media.html">Media</a></li>
-                            <li><a href="components.html">Components</a></li>
-                            <li><a href="other-components.html">Others</a></li>
-                        </ul>
-                    </li>
-                    <li class="sub-menu">
-                        <a href=""><i class="md md-trending-up"></i>Charts</a>
-                        <ul>
-                            <li><a href="flot-charts.html">Flot Charts</a></li>
-                            <li><a href="other-charts.html">Other Charts</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="calendar.html"><i class="md md-today"></i> Calendar</a></li>
-                    <li class="sub-menu">
-                        <a href=""><i class="md md-content-copy"></i> Sample Pages</a>
-                        <ul>
-                            <li><a href="list-view.html">List View</a></li>
-                            <li><a href="messages.html">Messages</a></li>
-                            <li><a href="login.html">Login and Sign Up</a></li>
-                            <li><a href="404.html">Error 404</a></li>
-                        </ul>
-                    </li>
+                    <li><a ui-sref="remission"><i class="md md-description"></i> Remisiones</a></li>
                 </ul>
             </div>
         </aside>
@@ -142,8 +107,10 @@
                 <div ui-view></div>
             </div>
         </section>
+        <button id="fixedbuttonRight" class="btn btn-primary btn-icon">
+            <i class="md md-home"></i>
+        </button>
     </section>
-    <div ui-view="userUpdateModal"></div>
 
     <!-- Javascript Libraries -->
     <script src="scripts/js/jquery-2.1.1.min.js"></script>
@@ -194,6 +161,7 @@
     <script src="scripts/controllers/producerController.js"></script>
     <script src="scripts/controllers/receptionController.js"></script>
     <script src="scripts/controllers/cylinderController.js"></script>
+    <script src="scripts/controllers/remissionController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
@@ -202,6 +170,7 @@
     <script src="scripts/services/producerService.js"></script>
     <script src="scripts/services/cylinderService.js"></script>
     <script src="scripts/services/receptionService.js"></script>
+    <script src="scripts/services/remissionService.js"></script>
 </body>
 
 </html>
