remissionController agregado, bugs corregidos

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
                         </ul>
                     </li>
 
-                    <li><a ui-sref="remission"><i class="md md-description"></i> Remisiones</a></li>
+                    <li><a ui-sref="remissionManage"><i class="md md-description"></i> Remisiones</a></li>
                 </ul>
             </div>
         </aside>
