SE agrego confirmacion en eliminar y controlador para update en recepcion, ademas de validacion en recepcion.

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css" media="screen" title="no title"
         charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
     <link rel="stylesheet" href="styles/app.min.css">
     <link rel="stylesheet" href="vendors/animate-css/animate.min.css">
     <link rel="stylesheet" href="vendors/farbtastic/farbtastic.css">
@@ -139,8 +140,9 @@
     <script src="scripts/js/datatable.js"></script>
     <script src="scripts/js/charts.js"></script>
     <script src="scripts/js/functions.js"></script>
-
+    
     <!--AngularJs-->
+    <script src="bower_components/sweetalert/dist/sweetalert.min.js"> </script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
