relacion recepcion grill agregada

--- a/app/index.html
+++ b/app/index.html
@@ -162,7 +162,8 @@
     <script src="scripts/services/receptionService.js"></script>
     <script src="scripts/services/remissionService.js"></script>
     <script src="scripts/services/grillService.js"></script>
-    <script src="scripts/services/samplingService.js"></scripts>
+    <script src="scripts/services/samplingService.js"></script>
+    <script src="scripts/services/receptionAndGrillService.js"></script>
 </body>
 
 </html>
