bugs en ids reparados

--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,9 @@
             </div>
         </aside>
         <section id="content">
+            <div>
                 <div ui-view></div>
+            </div>
         </section>
         <button id="fixedbuttonRight" class="btn btn-primary btn-icon">
             <i class="md md-home"></i>
@@ -145,7 +147,7 @@
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <!--AngularMaterial-->
-    
+
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
