--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
                             <li><a ui-sref="grillInvAct">Inventario Actual</a></li>
                         </ul>
                     </li>
+                    <li><a ui-sref="samplingManage"><i class="md md-description"></i>Muestreos</a></li>
                     <li class="sub-menu">
                         <a href=""><i class="md md-assignment"></i>Recepciones</a>
                         <ul>
@@ -147,7 +148,6 @@
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <!--AngularMaterial-->
-
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
