salidas de Grills agregadas

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,9 @@
             bottom: 20px;
             left: 20px;
         }
+        .contentC{
+            margin-top: 50px;
+        }
     </style>
 </head>
 
@@ -115,7 +118,7 @@
             </div>
         </aside>
         <section id="content">
-            <div>
+            <div class="contentC">
                 <div ui-view></div>
             </div>
         </section>
