--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
                 </div>
             </li>
             <li class="logo hidden-xs">
-                <a href="index.html">Material Admin</a>
+                <a ui-sref="home">NASE NUEZ APP</a>
             </li>
             <li class="pull-right">
                 <ul class="top-menu">
@@ -93,7 +93,7 @@
                             <li><a ui-sref="grillAdd">Alta de Parillas</a></li>
                             <li><a ui-sref="grillIssue">Salida de Parillas</a></li>
                             <li><a ui-sref="grillManage">Inventario de Proceso</a></li>
-                            <li><a ui-sref="grillInvAct">Inventario Actual</a></li>
+                            <li><a ui-sref="grillCurrentInv">Inventario Actual</a></li>
                         </ul>
                     </li>
                     <li class="sub-menu">
@@ -165,6 +165,7 @@
     <script src="scripts/controllers/remissionController.js"></script>
     <script src="scripts/controllers/grillController.js"></script>
     <script src="scripts/controllers/samplingController.js"></script>
+    <script src="scripts/controllers/grillCurrentInvController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
