--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
             bottom: 20px;
             right: 20px;
         }
-        
+
         #fixedbuttonLeft {
             position: fixed;
             bottom: 20px;
@@ -100,7 +100,8 @@
                     </li>
 
                     <li><a ui-sref="remissionManage"><i class="md md-description"></i> Remisiones</a></li>
-                   
+                    <li><a ui-sref="humidity"><i class="md md-cloud-queue"></i> Humedad</a></li>
+
                     <li class="sub-menu">
                         <a href=""><i class="md md-my-library-books"></i>Reportes</a>
                         <ul>
@@ -175,6 +176,7 @@
     <script src="scripts/controllers/remissionController.js"></script>
     <script src="scripts/controllers/grillController.js"></script>
     <script src="scripts/controllers/samplingController.js"></script>
+    <script src="scripts/controllers/humidityController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
@@ -185,7 +187,8 @@
     <script src="scripts/services/receptionService.js"></script>
     <script src="scripts/services/remissionService.js"></script>
     <script src="scripts/services/grillService.js"></script>
-    <script src="scripts/services/samplingService.js"></scripts>
+    <script src="scripts/services/samplingService.js"></script>
+    <script src="scripts/services/humidityService.js"></script>
 </body>
 
 </html>
