se quito angular material y se corrigio el contenedor

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="vendors/animate-css/animate.min.css">
     <link rel="stylesheet" href="vendors/farbtastic/farbtastic.css">
     <link rel="stylesheet" href="vendors/bootgrid/jquery.bootgrid.min.css">
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+    <!--<link rel="stylesheet" href="bower_components/angular-material/angular-material.css">-->
     <link rel="stylesheet" href="styles/datetimepicker.css">
     <link rel="stylesheet" href="bower_components/angular-datatables/dist/css/angular-datatables.css">
     <link rel="stylesheet" href="bower_components/angular-datatables/jquery.dataTables.min.css">
@@ -121,10 +121,8 @@
             </div>
         </aside>
         <section id="content">
-            <div class="contentC">
-                <md-content flex layout-padding>
+            <div class="container-fluid">
                     <div ui-view></div>
-                </md-content>
             </div>
         </section>
         <button id="fixedbuttonRight" class="btn btn-primary btn-icon">
@@ -166,7 +164,7 @@
 
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
-    <script src="bower_components/angular-material/angular-material.js"></script>
+    <!--<script src="bower_components/angular-material/angular-material.js"></script>-->
 
     <script src="scripts/app.js"></script>
 
