--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <title></title>
@@ -16,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/angular-datatables/dist/css/angular-datatables.css">
     <link rel="stylesheet" href="bower_components/angular-datatables/jquery.dataTables.min.css">
     <link rel="stylesheet" href="bower_components/angular-datatables/dist/plugins/datatables-buttons/css/buttons.dataTables.css">
+    <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css">
     <link rel="shortcut icon" href="favicon.ico">
     <style>
         #fixedbuttonRight {
@@ -160,6 +160,7 @@
     <script src="bower_components/angular-datatables/dist/plugins/datatables-buttons/js/buttons.flash.js"></script>
     <script src="bower_components/angular-datatables/dist/plugins/datatables-buttons/js/buttons.html5.js"></script>
     <script src="bower_components/angular-datatables/dist/plugins/datatables-buttons/js/buttons.print.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <!--AngularMaterial-->
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
