Se agrego captura de variedad

--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
 
                     <li><a ui-sref="users"><i class="md md-people"></i> Usuarios</a></li>
 
-                    <li><a ui-sref="producers"><i class="md md-people-outline"></i> Productores</a></li>
+                    <li><a ui-sref="producersAndVarieties"><i class="md md-people-outline"></i> Productores y Variedades</a></li>
 
                     <li><a ui-sref="cylinder"><i class="md md-view-column"></i> Cilindros</a></li>
 
@@ -169,13 +169,14 @@
 
     <script src="scripts/controllers/loginController.js"></script>
     <script src="scripts/controllers/userController.js"></script>
-    <script src="scripts/controllers/producerController.js"></script>
+    <script src="scripts/controllers/producerAndVarietiesController.js"></script>
     <script src="scripts/controllers/receptionController.js"></script>
     <script src="scripts/controllers/cylinderController.js"></script>
     <script src="scripts/controllers/remissionController.js"></script>
-    <script src="scripts/controllers/grillController.js"></script>
+    <script src="scripts/controllers/grill/grillController.js"></script>
+    <script src="scripts/controllers/grill/grillIssueController.js"></script>
     <script src="scripts/controllers/samplingController.js"></script>
-    <script src="scripts/controllers/grillCurrentInvController.js"></script>
+    <script src="scripts/controllers/grill/grillCurrentInvController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
@@ -189,6 +190,7 @@
     <script src="scripts/services/samplingService.js"></script>
     <script src="scripts/services/receptionAndGrillService.js"></script>
     <script src="scripts/services/clearService.js"></script>
+    <script src="scripts/services/varietyService.js"></script>
 </body>
 
 </html>
