formato de selección

--- a/app/index.html
+++ b/app/index.html
@@ -179,6 +179,7 @@
     <script src="scripts/controllers/samplingController.js"></script>
     <script src="scripts/controllers/humidityController.js"></script>
     <script src="scripts/controllers/grill/grillCurrentInvController.js"></script>
+    <script src="scripts/controllers/selectionController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
@@ -194,6 +195,7 @@
     <script src="scripts/services/receptionAndGrillService.js"></script>
     <script src="scripts/services/clearService.js"></script>
     <script src="scripts/services/varietyService.js"></script>
+    <script src="scripts/services/selectionService.js"></script>
 </body>
 
 </html>
