--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="vendors/bootgrid/jquery.bootgrid.min.css">
     <link rel="stylesheet" href="styles/datetimepicker.css">
     <link rel="stylesheet" href="bower_components/angular-datatables/dist/css/angular-datatables.css">
-    <link rel="stylesheet" href="bower_components/angular-datatables/jquery.dataTables.css">
+    <link rel="stylesheet" href="bower_components/angular-datatables/jquery.dataTables.min.css">
     <link rel="stylesheet" href="bower_components/angular-datatables/dist/plugins/datatables-buttons/css/buttons.dataTables.css">
     
     <link rel="stylesheet" href="bower_components/angular-datatables/dist/plugins/bootstrap/datatables.bootstrap.min.css">
@@ -85,11 +85,8 @@
                 </div>
                 <ul class="main-menu">
                     <li class="active"><a ui-sref="home"><i class="md md-home"></i> Home</a></li>
-
                     <li><a ui-sref="users"><i class="md md-people"></i> Usuarios</a></li>
-
                     <li><a ui-sref="producersAndVarieties"><i class="md md-people-outline"></i> Productores y Variedades</a></li>
-
                     <li><a ui-sref="cylinder"><i class="md md-view-column"></i> Cilindros</a></li>
                     <li class="sub-menu">
                         <a href=""> <i class="md md md-format-color-reset"></i>Humedad</a>
@@ -98,7 +95,6 @@
                             <li><a ui-sref="humidityManage">Gestion de Humedad</a></li>
                         </ul>
                     </li>
-
                     <li class="sub-menu">
                         <a href=""><i class="md md-view-module"></i>Parillas</a>
                         <ul>
@@ -123,10 +119,7 @@
                             <li><a ui-sref="receptionManage">Gestion de Recepciones</a></li>
                         </ul>
                     </li>
-
                     <li><a ui-sref="remissionManage"><i class="md md-description"></i> Remisiones</a></li>
-                    <li><a ui-sref="humidity"><i class="md md-cloud-queue"></i> Humedad</a></li>
-
                     <li class="sub-menu">
                         <a href=""><i class="md md-my-library-books"></i>Reportes</a>
                         <ul>
@@ -213,6 +206,7 @@
     <script src="scripts/controllers/report/outputsReportController.js"></script>
     <script src="scripts/controllers/report/reportOriginController.js"></script>
     <script src="scripts/controllers/report/processInventoryReportController.js"></script>
+    <script src="scripts/controllers/report/reportController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
