se agregaron los reportes de parrillas se reestructuro el controlador de reportes

--- a/app/index.html
+++ b/app/index.html
@@ -123,11 +123,11 @@
                     <li class="sub-menu">
                         <a href=""><i class="md md-my-library-books"></i>Reportes</a>
                         <ul>
-                            <li><a ui-sref="reportingProcess">Reporte de proceso</a></li>
-                            <li><a ui-sref="producerReport">Reporte de produccion por productor</a></li>
+                            <li><a ui-sref="reportingProcess">Reporte de Proceso</a></li>
+                            <li><a ui-sref="producerReport">Reporte de Produccion</a></li>
                             <li><a ui-sref="processInventory">Inventario de Proceso</a></li>
+                            <li><a ui-sref="currentInventory">Inventario Actual</a></li>
                             <li><a ui-sref="outputs">Salidas</a></li>
-                            <li><a ui-sref="currentInventoryGrills">Inventario Actual de Parrillas</a></li>
                             <li><a ui-sref="dailyABEL">Reporte Diario ABEL</a></li>
                             <li><a ui-sref="reportOrigin">Reporte de Origen</a></li>
                             <li><a ui-sref="firstFinalSummary">Reporte Resumen Final Primeras</a></li>
@@ -217,5 +217,4 @@
     <script src="scripts/services/reportService.js"></script>
     <script src="scripts/services/humidityService.js"></script>
 </body>
-
 </html>
