--- a/app/index.html
+++ b/app/index.html
@@ -224,6 +224,7 @@
     <script src="scripts/services/varietyService.js"></script>
     <script src="scripts/services/reportService.js"></script>
     <script src="scripts/services/humidityService.js"></script>
+    <script src="scripts/services/messageService.js"></script>
 </body>
 
 </html>
