se agrego captura y manejo de humedad

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
                         <div class="profile-pic">
                             <img src="img/profile-pics/8.jpg" alt="">
                         </div>
-                        <div class="profile-info">UserName<i class="md md-arrow-drop-down"></i></div>
+                        <div class="profile-info">{{currentUser.userName}}<i class="md md-arrow-drop-down"></i></div>
                     </a>
                     <ul class="main-menu">
                         <li>
