se agregaron graficas al home

--- a/app/index.html
+++ b/app/index.html
@@ -177,6 +177,9 @@
     <script src="bower_components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.min.js"></script>
     <script src="bower_components/angular-datatables/dist/plugins/datatables-responsive/js/dataTables.responsive.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="bower_components/highcharts/highcharts.js"></script>
+    <script src="bower_components/highcharts/highcharts-3d.js"></scriipt>
+    <script src="bower_components/highcharts/modules/exporting.js"></script>
 
     <!--AngularMaterial-->
     <script src="scripts/js/datetimepicker.js"></script>
@@ -200,7 +203,7 @@
     <script src="scripts/controllers/humidityController.js"></script>
     <script src="scripts/controllers/reportController.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
-    <script src="scripts/controllers/listenerController.js"></script>
+    <script src="scripts/controllers/homeController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
