--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
                         <ul>
                             <li><a ui-sref="humidityAdd">Alta de Humedad</a></li>
                             <li><a ui-sref="humidityManage">Gestion de Humedad</a></li>
+                            <li><a ui-sref="humidityLastSamplings">Gestion Ultimas Muestras</a></li>
                         </ul>
                     </li>
                     <li class="sub-menu" ng-if="(currentUser.role === userRoles.grillUser) || (currentUser.role === userRoles.admin)">
